// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table (isCI = false) > handles null and undefined values 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│ Alice      │            │
│            │ Test       │
│ Bob        │            │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > handles wide characters (CJK) 1`] = `
[
  "┌────────────┬──────────────────────┐
│ 名前       │ 説明                 │
├────────────┼──────────────────────┤
│ 太郎       │ 日本語のテスト       │
│ 花子       │ もう一つのテスト     │
└────────────┴──────────────────────┘
",
]
`;

exports[`table (isCI = false) > renders basic table with data 1`] = `
[
  "┌───────┬─────────────────┬───────┐
│ ID    │ Name            │   Age │
├───────┼─────────────────┼───────┤
│ 1     │ Alice           │    30 │
│ 2     │ Bob             │    25 │
│ 3     │ Charlie         │    35 │
└───────┴─────────────────┴───────┘
",
]
`;

exports[`table (isCI = false) > renders empty table 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│        (no data)        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with ascii border style 1`] = `
[
  "+------------+------------+
| Name       | Value      |
+------------+------------+
| Test       | 123        |
+------------+------------+
",
]
`;

exports[`table (isCI = false) > renders table with custom formatters 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ Name       │      Score │ Status     │
├────────────┼────────────┼────────────┤
│ Alice      │        95% │ ✓          │
│ Bob        │        78% │ ✗          │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with custom styles 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Status     │
├────────────┼────────────┤
│ Alice      │ active     │
│ Bob        │ inactive   │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with double border style 1`] = `
[
  "╔════════════╦════════════╗
║ Name       ║ Value      ║
╠════════════╬════════════╣
║ Test       ║ 123        ║
╚════════════╩════════════╝
",
]
`;

exports[`table (isCI = false) > renders table with no borders 1`] = `
[
  "Name       Value     
Test       123       
",
]
`;

exports[`table (isCI = false) > renders table with rounded border style 1`] = `
[
  "╭────────────┬────────────╮
│ Name       │ Value      │
├────────────┼────────────┤
│ Test       │ 123        │
╰────────────┴────────────╯
",
]
`;

exports[`table (isCI = false) > renders table with single border style 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with text alignment 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ Left       │   Center   │      Right │
├────────────┼────────────┼────────────┤
│ L          │     C      │          R │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders with auto width 1`] = `
[
  "┌───────┬───────────────────────┐
│ Short │ Long                  │
├───────┼───────────────────────┤
│ A     │ This is a longer text │
│ B     │ Short                 │
└───────┴───────────────────────┘
",
]
`;

exports[`table (isCI = false) > renders with content width 1`] = `
[
  "┌──────┬─────────────┐
│ Name │ Description │
├──────┼─────────────┤
│ A    │ First       │
│ BB   │ Second item │
│ CCC  │ Third       │
└──────┴─────────────┘
",
]
`;

exports[`table (isCI = false) > renders with header styling 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders without header 1`] = `
[
  "│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > truncates long text with ellipsis 1`] = `
[
  "┌─────────────────┐
│ Text            │
├─────────────────┤
│ This is a ve... │
└─────────────────┘
",
]
`;

exports[`table (isCI = true) > handles null and undefined values 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│ Alice      │            │
│            │ Test       │
│ Bob        │            │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > handles wide characters (CJK) 1`] = `
[
  "┌────────────┬──────────────────────┐
│ 名前       │ 説明                 │
├────────────┼──────────────────────┤
│ 太郎       │ 日本語のテスト       │
│ 花子       │ もう一つのテスト     │
└────────────┴──────────────────────┘
",
]
`;

exports[`table (isCI = true) > renders basic table with data 1`] = `
[
  "┌───────┬─────────────────┬───────┐
│ ID    │ Name            │   Age │
├───────┼─────────────────┼───────┤
│ 1     │ Alice           │    30 │
│ 2     │ Bob             │    25 │
│ 3     │ Charlie         │    35 │
└───────┴─────────────────┴───────┘
",
]
`;

exports[`table (isCI = true) > renders empty table 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│        (no data)        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with ascii border style 1`] = `
[
  "+------------+------------+
| Name       | Value      |
+------------+------------+
| Test       | 123        |
+------------+------------+
",
]
`;

exports[`table (isCI = true) > renders table with custom formatters 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ Name       │      Score │ Status     │
├────────────┼────────────┼────────────┤
│ Alice      │        95% │ ✓          │
│ Bob        │        78% │ ✗          │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with custom styles 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Status     │
├────────────┼────────────┤
│ Alice      │ active     │
│ Bob        │ inactive   │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with double border style 1`] = `
[
  "╔════════════╦════════════╗
║ Name       ║ Value      ║
╠════════════╬════════════╣
║ Test       ║ 123        ║
╚════════════╩════════════╝
",
]
`;

exports[`table (isCI = true) > renders table with no borders 1`] = `
[
  "Name       Value     
Test       123       
",
]
`;

exports[`table (isCI = true) > renders table with rounded border style 1`] = `
[
  "╭────────────┬────────────╮
│ Name       │ Value      │
├────────────┼────────────┤
│ Test       │ 123        │
╰────────────┴────────────╯
",
]
`;

exports[`table (isCI = true) > renders table with single border style 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with text alignment 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ Left       │   Center   │      Right │
├────────────┼────────────┼────────────┤
│ L          │     C      │          R │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders with auto width 1`] = `
[
  "┌───────┬───────────────────────┐
│ Short │ Long                  │
├───────┼───────────────────────┤
│ A     │ This is a longer text │
│ B     │ Short                 │
└───────┴───────────────────────┘
",
]
`;

exports[`table (isCI = true) > renders with content width 1`] = `
[
  "┌──────┬─────────────┐
│ Name │ Description │
├──────┼─────────────┤
│ A    │ First       │
│ BB   │ Second item │
│ CCC  │ Third       │
└──────┴─────────────┘
",
]
`;

exports[`table (isCI = true) > renders with header styling 1`] = `
[
  "┌────────────┬────────────┐
│ Name       │ Value      │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders without header 1`] = `
[
  "│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > truncates long text with ellipsis 1`] = `
[
  "┌─────────────────┐
│ Text            │
├─────────────────┤
│ This is a ve... │
└─────────────────┘
",
]
`;
